--- a/a-1b.ipynb
+++ b/a-1b.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-10-10T12:53:38.199038Z",
-     "start_time": "2025-10-10T12:53:37.700814Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import pandas as pd\n",
@@ -24,31 +20,21 @@
     "print(\"station.shape =\", station.shape)\n",
     "print(\"observation.shape =\", observation.shape)"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "patient.shape = (2102, 13)\n",
-      "station.shape = (798, 6)\n",
-      "observation.shape = (12081, 23)\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# (A-1b)\n",
     "print(\"patient columns:\", patient.columns.tolist())\n",
     "print(\"station columns:\", station.columns.tolist())\n",
     "print(\"observation columns:\", observation.columns.tolist())"
    ],
-   "id": "2e02ff84a2be316f"
+   "id": "2e02ff84a2be316f",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -84,12 +70,7 @@
    "id": "8ba65ff0ef75d7ad"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-10T10:59:13.048461Z",
-     "start_time": "2025-10-10T10:59:12.903056Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def dtype_counts(df): \n",
@@ -115,33 +96,8 @@
     "summ\n"
    ],
    "id": "8ed942341698c6b8",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'patient': {'shape': (2102, 13),\n",
-       "  'dtype_counts': {'string': 8,\n",
-       "   'Int64': 3,\n",
-       "   'category': 1,\n",
-       "   'datetime64[ns, UTC]': 1},\n",
-       "  'missing_total': 3993},\n",
-       " 'station': {'shape': (798, 6),\n",
-       "  'dtype_counts': {'Float64': 2,\n",
-       "   'string': 2,\n",
-       "   'datetime64[ns, UTC]': 1,\n",
-       "   'category': 1},\n",
-       "  'missing_total': 0},\n",
-       " 'observation': {'shape': (12081, 23),\n",
-       "  'dtype_counts': {'Float64': 22, 'Int64': 1},\n",
-       "  'missing_total': 0}}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 22
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -152,13 +108,13 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "missing_pct = (patient.isna().sum() / len(patient) * 100).round(2).sort_values(ascending=False)\n",
     "missing_pct.head(10)"
    ],
-   "id": "cb6e2a1e14de463"
+   "id": "cb6e2a1e14de463",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -190,8 +146,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "sta_lat = pd.to_numeric(station[\"latitude\"], errors=\"coerce\").round(4)\n",
     "sta_lon = pd.to_numeric(station[\"longitude\"], errors=\"coerce\").round(4)\n",
@@ -223,7 +177,9 @@
     "\n",
     "print(f\"patient → station match by coords: {pat_match}/{pat_valid} ({(pat_match/pat_valid if pat_valid else 0):.3f})\")\n"
    ],
-   "id": "d9731fb9eeee5bc5"
+   "id": "d9731fb9eeee5bc5",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -241,8 +197,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# 1) SpO2\n",
     "plt.figure()\n",
@@ -260,7 +214,9 @@
     "plt.ylabel(\"Frekvencia\")\n",
     "plt.show()"
    ],
-   "id": "b61727fc71d956af"
+   "id": "b61727fc71d956af",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -284,8 +240,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "numeric = observation.select_dtypes(include=['number'])\n",
     "\n",
@@ -296,7 +250,9 @@
     "plt.title(\"Korelačná matica fyziologických atribútov (observation.csv)\")\n",
     "plt.show()"
    ],
-   "id": "4806635309f38724"
+   "id": "4806635309f38724",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -322,21 +278,19 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "corr_pairs = corr.unstack().sort_values(ascending=False)\n",
     "corr_pairs = corr_pairs[(corr_pairs < 0.999) & (corr_pairs > -0.999)]\n",
     "print(\"🔝 Top 10 korelácií medzi atribútmi:\\n\")\n",
     "print(corr_pairs.head(10))"
    ],
-   "id": "ead85ac6397936b0"
+   "id": "ead85ac6397936b0",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "pairs_to_plot = [\n",
     "    (\"CO\", \"HR\"),\n",
@@ -352,7 +306,9 @@
     "    plt.ylabel(y)\n",
     "    plt.show()"
    ],
-   "id": "1fdc08c9ac3593d0"
+   "id": "1fdc08c9ac3593d0",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -379,12 +335,7 @@
    "id": "c2169b68e62b499a"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-10T13:09:17.769186Z",
-     "start_time": "2025-10-10T13:09:17.748590Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import re\n",
@@ -405,46 +356,11 @@
     "print(ranges[[\"Variable\", \"Min\", \"Max\"]])"
    ],
    "id": "e0b49a960950afe1",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Variable         Unit                     Description        Value Range\n",
-      "0     SpO₂            %    Peripheral oxygen saturation            95–100%\n",
-      "1       HR          bpm  Heart rate from pulse oximeter         60–100 bpm\n",
-      "2       PI            %                 Perfusion index            0.2–20%\n",
-      "3       RR  breaths/min                Respiratory rate  12–20 breaths/min\n",
-      "4    EtCO₂         mmHg        End-tidal carbon dioxide         35–45 mmHg\n",
-      "                Variable   Min    Max\n",
-      "0                   SpO₂  95.0  100.0\n",
-      "1                     HR  60.0  100.0\n",
-      "2                     PI   0.2   20.0\n",
-      "3                     RR  12.0   20.0\n",
-      "4                  EtCO₂  35.0   45.0\n",
-      "5                   FiO₂  21.0  100.0\n",
-      "6                    PRV  20.0  200.0\n",
-      "7                     BP  90.0  120.0\n",
-      "8       Skin Temperature  33.0   38.0\n",
-      "10                   PVI  10.0   20.0\n",
-      "11              Hb level  12.0   18.0\n",
-      "12                    SV  60.0  100.0\n",
-      "13                    CO   4.0    8.0\n",
-      "16  Signal Quality Index   0.0  100.0\n",
-      "18   O₂ extraction ratio   0.2    0.3\n",
-      "19                   SNR  20.0   40.0\n"
-     ]
-    }
-   ],
-   "execution_count": 15
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-10T13:09:20.318345Z",
-     "start_time": "2025-10-10T13:09:20.268691Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "anomalies = []\n",
@@ -466,212 +382,8 @@
     "anomalies_df\n"
    ],
    "id": "2062b2f58bfbd390",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                 Atribút  Počet abnormálnych hodnôt  Min povolené  \\\n",
-       "0                   SpO₂                          0          95.0   \n",
-       "1                     HR                          0          60.0   \n",
-       "2                     PI                          0           0.2   \n",
-       "3                     RR                          0          12.0   \n",
-       "4                  EtCO₂                          0          35.0   \n",
-       "5                   FiO₂                          0          21.0   \n",
-       "6                    PRV                          0          20.0   \n",
-       "7                     BP                          0          90.0   \n",
-       "8       Skin Temperature                          0          33.0   \n",
-       "9                    PVI                          0          10.0   \n",
-       "10              Hb level                          0          12.0   \n",
-       "11                    SV                          0          60.0   \n",
-       "12                    CO                          0           4.0   \n",
-       "13  Signal Quality Index                          0           0.0   \n",
-       "14   O₂ extraction ratio                          0           0.2   \n",
-       "15                   SNR                          0          20.0   \n",
-       "\n",
-       "    Max povolené Príklady idx  \n",
-       "0          100.0           []  \n",
-       "1          100.0           []  \n",
-       "2           20.0           []  \n",
-       "3           20.0           []  \n",
-       "4           45.0           []  \n",
-       "5          100.0           []  \n",
-       "6          200.0           []  \n",
-       "7          120.0           []  \n",
-       "8           38.0           []  \n",
-       "9           20.0           []  \n",
-       "10          18.0           []  \n",
-       "11         100.0           []  \n",
-       "12           8.0           []  \n",
-       "13         100.0           []  \n",
-       "14           0.3           []  \n",
-       "15          40.0           []  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Atribút</th>\n",
-       "      <th>Počet abnormálnych hodnôt</th>\n",
-       "      <th>Min povolené</th>\n",
-       "      <th>Max povolené</th>\n",
-       "      <th>Príklady idx</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SpO₂</td>\n",
-       "      <td>0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>HR</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PI</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RR</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EtCO₂</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>FiO₂</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>PRV</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>BP</td>\n",
-       "      <td>0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Skin Temperature</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>PVI</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Hb level</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>SV</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Signal Quality Index</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>O₂ extraction ratio</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>SNR</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 16
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -689,12 +401,7 @@
    "id": "3971117a4c2a65ac"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-10T13:22:31.429516Z",
-     "start_time": "2025-10-10T13:22:31.404996Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "logic_errors = []\n",
@@ -744,89 +451,8 @@
     "logic_df"
    ],
    "id": "64f047cb4774ba9c",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                               Podmienka  Počet porušení\n",
-       "0                        BP = 0 a HR > 0               0\n",
-       "1                |CO - HR*SV/1000| > 30%               0\n",
-       "2   Signal Quality Index ≥ 80 a SNR < 20               0\n",
-       "3  Signal Quality Index ≤ 10 a SpO₂ ≥ 99               0\n",
-       "4                FiO₂ ≈ 21% a SpO₂ < 85%               0\n",
-       "5         Latitude/Longitude mimo rozsah               0\n",
-       "6                   RR > 40 a EtCO₂ < 20               0"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Podmienka</th>\n",
-       "      <th>Počet porušení</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>BP = 0 a HR &gt; 0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>|CO - HR*SV/1000| &gt; 30%</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Signal Quality Index ≥ 80 a SNR &lt; 20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Signal Quality Index ≤ 10 a SpO₂ ≥ 99</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>FiO₂ ≈ 21% a SpO₂ &lt; 85%</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Latitude/Longitude mimo rozsah</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>RR &gt; 40 a EtCO₂ &lt; 20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 17
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -860,10 +486,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "3b9b8f3bf3c74c49"
+   "id": "3b9b8f3bf3c74c49",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
